force-app/main/default/objects/DM_Inventory__c/DM_Inventory__c.object-meta.xml
<CustomObject>
    <label>Inventory</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Inventory #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>