force-app/main/default/objects/DM_Inventory__c/fields/DM_Crop_Variety_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>DM_Crop_Variety_Storage_Location__c</fullName>
    <formula>DM_Crop_Variety__c + &quot; - &quot; +  DM_Storage_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crop Variety + Storage Location</label>
    <type>Text</type>
</CustomField>