force-app/main/default/objects/DM_Inventory__c/fields/DM_Debits__c.field-meta.xml
<CustomField>
    <fullName>DM_Debits__c</fullName>
    <label>Out</label>
    <summarizedField>DM_Inventory_Line_Item__c.DM_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>DM_Inventory_Line_Item__c.DM_Debit_Credit__c</field>
        <operation>equals</operation>
        <value>Out</value>
    </summaryFilterItems>
    <summaryForeignKey>DM_Inventory_Line_Item__c.DM_Inventory_Num__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>