force-app/main/default/objects/DM_Inventory__c/fields/DM_Harvest__c.field-meta.xml
<CustomField>
    <fullName>DM_Harvest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Harvest</label>
    <referenceTo>DM_Harvest__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>