force-app/main/default/objects/DM_Inventory__c/fields/DM_Inventory_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Inventory_Date__c</fullName>
    <label>Inventory Date</label>
    <type>Date</type>
</CustomField>