force-app/main/default/objects/DM_Inventory__c/fields/DM_Material__c.field-meta.xml
<CustomField>
    <fullName>DM_Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>DM_Material__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>