force-app/main/default/objects/DM_Inventory__c/fields/DM_Material_Storage__c.field-meta.xml
<CustomField>
    <fullName>DM_Material_Storage__c</fullName>
    <formula>if( RecordType.Name = &quot;Harvest&quot;,
DM_Production__r.Name + &quot;: &quot; + DM_Material__r.Name   + &quot; (&quot; +   DM_Storage_Location__r.Name + &quot;)&quot;,
DM_Material__r.Name   + &quot; (&quot; +   DM_Storage_Location__r.Name + &quot;)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material + Storage</label>
    <type>Text</type>
</CustomField>