force-app/main/default/objects/DM_Inventory__c/fields/DM_Production_Complete__c.field-meta.xml
<CustomField>
    <fullName>DM_Production_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Production Complete</label>
    <type>Checkbox</type>
</CustomField>