force-app/main/default/objects/DM_Inventory__c/fields/DM_Purchase__c.field-meta.xml
<CustomField>
    <fullName>DM_Purchase__c</fullName>
    <label>Purchase #</label>
    <length>12</length>
    <type>Text</type>
</CustomField>