force-app/main/default/objects/DM_Inventory__c/fields/DM_Reference_Harvest_Id__c.field-meta.xml
<CustomField>
    <fullName>DM_Reference_Harvest_Id__c</fullName>
    <label>Reference Harvest Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>