force-app/main/default/objects/DM_Inventory__c/fields/DM_Remaining_Inventory__c.field-meta.xml
<CustomField>
    <fullName>DM_Remaining_Inventory__c</fullName>
    <formula>DM_Credits__c - DM_Debits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>