force-app/main/default/objects/DM_Inventory__c/fields/DM_Sale_UOM__c.field-meta.xml
<CustomField>
    <fullName>DM_Sale_UOM__c</fullName>
    <label>Sale UOM</label>
    <length>80</length>
    <type>Text</type>
</CustomField>