force-app/main/default/objects/DM_Inventory__c/fields/DM_Source__c.field-meta.xml
<CustomField>
    <fullName>DM_Source__c</fullName>
    <label>Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>