force-app/main/default/objects/DM_Inventory__c/fields/DM_Storage_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>DM_Storage_Location_Name__c</fullName>
    <formula>DM_Storage_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Storage Location</label>
    <type>Text</type>
</CustomField>