force-app/main/default/objects/DM_Inventory__c/recordTypes/DM_Harvest.recordType-meta.xml
<RecordType>
    <fullName>DM_Harvest</fullName>
    <active>true</active>
    <description>Crops that are harvested from farm operations and stored.</description>
    <label>Harvest</label>
</RecordType>