force-app/main/default/objects/DM_Inventory__c/recordTypes/DM_Inputs.recordType-meta.xml
<RecordType>
    <fullName>DM_Inputs</fullName>
    <active>true</active>
    <description>Inputs that are applied to a field or production facility.</description>
    <label>Inputs</label>
</RecordType>