force-app/main/default/objects/DM_Inventory__c/recordTypes/DM_Material.recordType-meta.xml
<RecordType>
    <fullName>DM_Material</fullName>
    <active>true</active>
    <description>Materials (seed, planting stock) that are planted in a field or production facility.</description>
    <label>Material</label>
</RecordType>