force-app/main/default/objects/DM_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DM_Crop_Variety__c</columns>
    <columns>DM_Material__c</columns>
    <columns>DM_Material_UOM__c</columns>
    <columns>DM_Remaining_Inventory__c</columns>
    <columns>DM_Storage_Location__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>